--- a/src/components/SeachBar/styles.css
+++ b/src/components/SeachBar/styles.css
@@ -28,6 +28,7 @@
   .dsc-search-bar button {
     width: 40px;
     color: var(--dsc-color-font-primary);
+    cursor: pointer;
   }
   
   .dsc-search-bar button[type="submit"] {
