--- a/src/index.css
+++ b/src/index.css
@@ -249,8 +249,12 @@ nav a {
   color: var(--dsc-color-font-placeholder);
 }
 
-.dsc-form-control[data-invalid="true"]{
+.dsc-form-control[data-invalid="true"][data-dirty="true"]{
   border: 1px solid var(--dsc-color-error);
+}
+
+.dsc-form-control[data-invalid="true"][data-dirty="true"] ~ div {
+  display: unset;
 }
 
 .dsc-form-error {
@@ -258,10 +262,6 @@ nav a {
   font-size: 12px;
   padding-left: 4px;
   display: none;
-}
-
-.dsc-form-control[data-invalid="true"] ~ div {
-  display: unset;
 }
 
 .dsc-select:invalid {
